--- a/IDM/cazzi tuoi niente/project shit.ipynb
+++ b/IDM/cazzi tuoi niente/project shit.ipynb
@@ -5,7 +5,7 @@
    "id": "cd91c6b0",
    "metadata": {},
    "source": [
-    "Lorenzo Sala, MAT. 942481\n",
+    "FUCK THIS SHIT\n",
     "\n",
     "Submitted for the course of Introduction to Data Science, M. Sc. in Stochastics and Data Science"
    ]
