--- a/IDM/smallpacco.tex
+++ b/IDM/smallpacco.tex
@@ -25,6 +25,48 @@
 \newcommand{\trans}[1]{{#1}^{\mathsf{T}}}
 \newcommand{\ev}[1]{\mathbb{E}\left[#1\right]}
 \newcommand{\unmezz}{\frac{1}{2}}
+	\newcommand{\Z}{\mathbb{Z}}
+\newcommand{\R}{\mathbb{R}}
+\newcommand{\N}{\mathbb{N}}
+\newcommand{\T}{\mathbb{T}}
+\newcommand{\Tbar}{\overline{\T}}
+\newcommand{\Nstar}{\N^{*}}
+\newcommand{\Rext}{\overline{\R}}
+\newcommand{\io}{\text{ i.o.}}
+\newcommand{\equalexpl}[1]{%
+	\underset{\substack{\uparrow\\\mathrlap{\text{\vspace{-3cm}\hspace{-1em}#1}}}}{=}}
+\newcommand{\dif}{\mathop{}\!\mathrm{d}}
+\newcommand{\convas}{\xrightarrow[]{\text{a.s.}}}
+\newcommand{\convpr}{\xrightarrow[]{\pr}}
+\newcommand{\convd}{\xrightarrow[]{\text{d}}}
+\newcommand{\convlp}{\xrightarrow[]{\lp}}
+\newcommand{\convw}{\xrightarrow[]{\mathrm{weak}}}
+\newcommand{\as}{\text{ a.s.}}
+\newcommand{\asstnr}{\sim N(0,1)}
+%\def\checkmark{\tikz\fill[scale=0.4](0,.35) -- (.25,0) -- (1,.7) -- (.25,.15) -- cycle;} 
+\newcommand{\dx}{\dif x}
+\newcommand{\dy}{\dif y}
+\newcommand{\dt}{\dif t}
+\newcommand{\du}{\dif u}
+\newcommand{\ds}{\dif s}
+\newcommand{\dw}{\dif\omega}
+\newcommand{\dmu}{\dif\mu}
+\newcommand{\dpr}{\dif\pr}
+\newcommand{\E}{\mathscr{E}}
+\newcommand{\B}{\mathscr{B}}
+\newcommand{\F}{\mathcal{F}}
+\newcommand{\G}{\mathscr{G}}
+\newcommand{\HS}{\mathscr{H}}
+\newcommand{\Zn}{\mathscr{Z}}
+\newcommand{\D}{\mathscr{D}}
+\newcommand{\Es}{\mathscr{S}}
+\newcommand{\xbar}{\overline{X}}
+\newcommand{\rbar}{\overline{\R}}
+\newcommand{\ybar}{\overline{Y}}
+\newcommand{\xxbar}{\overline{\xbar}}
+\newcommand{\xtilde}{\widetilde{X}}
+\newcommand{\ifonly}{\underline{if and only if}}
+%\newcommand{\Lp}{L^{p}}
 
 \newtcolorbox{riquadro}[1][]{enhanced, breakable,frame style={top color=Aquamarine3,bottom color=Aquamarine3},colback=black!80,coltext=Aquamarine3!50,title=#1,fonttitle=\bfseries,halign title=center,coltitle=black!80}
 \makeatletter
