--- a/ANB/paccoan.sty
+++ b/ANB/paccoan.sty
@@ -582,6 +582,7 @@
 		\newcommand{\normsp}[1]{\left(#1,\dnorm\right)}
 		\newcommand{\normspp}[1]{\left(#1,\dnorm_{#1}\right)}
 		\newcommand{\rv}{random variable}
+		\newcommand{\prj}[1]{\mathbf{P}_{#1}}
 		\titleformat{\section}{\color{IndianRed1}}{\color{red}\thesection}{1em}{}
 		\newcommand{\ubracketthin}[1]{\underbracket[0.3pt]{#1}}
 		\subsectionfont{\color{Sienna1}\bfseries}
